--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
                 <p class="credit super-font">By Ana Elena Azpúrua</p> 
                 
                 <p class="intro">
-                    <i>Nostalgia is one of Walt Disney World's magic ingredients. Going back to the same attraction you experience as a child can transport you to a time of happiness, or at least the fantasy of it. During a recent visit with my kids, to what extent was I reliving the past? How many of the rides we took were a new experience for me? What's the ratio of old to new memories at "the happiest place on Eath."</i>
+                    <i>Nostalgia is one of Walt Disney World's magic ingredients. Going back to the same attraction you experience as a child can transport you to a time of happiness, or at least the fantasy of it. During a recent visit with my kids, to what extent was I reliving the past? How many of the rides we took were a new experience for me? What's the ratio of old to new memories at "the happiest place on Earth."</i>
                 </p> <br>
                 
                 <div class="body-text sub-font"> 
